replace primitive wrapper constructor calls with the corresponding .valueOf() method call since the former are really deprecated in JDK 17
GitOrigin-RevId: 7e0b1425c62765fe7ce44bf0c17f427636a38d09