@@ -41,10 +41,10 @@ final class JavadocGenerationPanel extends JPanel {
     myTagDeprecated.addChangeListener(e -> myDeprecatedList.setEnabled(myTagDeprecated.isSelected()));
 
     @SuppressWarnings("UseOfObsoleteCollectionType") Hashtable<Integer, JComponent> labelTable = new Hashtable<>();
-    labelTable.put(new Integer(1), new JLabel(PsiKeyword.PUBLIC));
-    labelTable.put(new Integer(2), new JLabel(PsiKeyword.PROTECTED));
-    labelTable.put(new Integer(3), new JLabel(PsiKeyword.PACKAGE));
-    labelTable.put(new Integer(4), new JLabel(PsiKeyword.PRIVATE));
+    labelTable.put(Integer.valueOf(1), new JLabel(PsiKeyword.PUBLIC));
+    labelTable.put(Integer.valueOf(2), new JLabel(PsiKeyword.PROTECTED));
+    labelTable.put(Integer.valueOf(3), new JLabel(PsiKeyword.PACKAGE));
+    labelTable.put(Integer.valueOf(4), new JLabel(PsiKeyword.PRIVATE));
 
     myScopeSlider.setMaximum(4);
     myScopeSlider.setMinimum(1);
