@@ -150,7 +150,7 @@ public final class ValueContainerImpl<Value> extends UpdatableValueContainer<Val
         Object inputIdMappingValue = mapping.get(mappingValue);
         // prevent NPEs on file set due to Value class being mutable or having inconsistent equals wrt disk persistence
         // (instance that is serialized and new instance created with deserialization from the same bytes are expected to be equal)
-        myInputIdMappingValue = inputIdMappingValue != null ? inputIdMappingValue : new Integer(0);
+        myInputIdMappingValue = inputIdMappingValue != null ? inputIdMappingValue : Integer.valueOf(0);
       }
     }
   }
